change info message

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-10-09 12:34+0000\n"
+"POT-Creation-Date: 2017-10-17 09:44+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,15 +17,15 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: django_cms_opusplace/settings.py:157 django_cms_opusplace/settings.py:173
+#: django_cms_opusplace/settings.py:161 django_cms_opusplace/settings.py:177
 msgid "English"
 msgstr ""
 
-#: django_cms_opusplace/settings.py:158 django_cms_opusplace/settings.py:180
+#: django_cms_opusplace/settings.py:162 django_cms_opusplace/settings.py:184
 msgid "Chinese"
 msgstr ""
 
-#: django_cms_opusplace/templates/base.html:54
+#: django_cms_opusplace/templates/base.html:38
 msgid "Registration page"
 msgstr ""
 
@@ -77,6 +77,11 @@ msgstr ""
 msgid "Preferred course start"
 msgstr ""
 
-#: registration/views.py:14
-msgid "Registration successful."
+#: registration/views.py:13
+msgid ""
+"Thanks for your interest!<br />\n"
+"We will provide you with more details on the 'Problem solving - to awaken "
+"interest' course in early December.\n"
+"<p>Wish you all the best,<br />\n"
+"Opusplace team</p>"
 msgstr ""
